--- a/oehealth_idn/report/implementasi_keperawatan_report.xml
+++ b/oehealth_idn/report/implementasi_keperawatan_report.xml
@@ -2,66 +2,70 @@
 <odoo>
     <template id="report_implementasi_keperawatan">
         <t t-call="report.html_container">
-            <div class="page">
-                <style>
+            <t t-call="oehealth_idn.header_unit_registration_layout">
+                <div class="page">
+                    <style>
 
-                    th, td {
-                    padding: 5px;
-                    font-size:10px;
-                    }
-                    .border{
-                        border: 1px solid black;
-                    }
-                </style>
-                <div class="oe_structure">
-                    <h2 style="text-align:center;">IMPLEMENTASI KEPERAWATAN</h2>
-
-                    <table style="width:100%">
-                        <tr class="border">
-                            <td>No.RM</td>
-                            <td> : </td>
-                            <td><span t-esc="no_rm" /></td>
-                        </tr>
-                        <tr class="border">
-                            <td>Nama Pasien</td>
-                            <td> : </td>
-                            <td><span t-esc="patient_name" /></td>
-                        </tr>
-                        <tr class="border">
-                            <td>Tanggal Lahir </td>
-                            <td> : </td>
-                            <td><span t-esc="dob" t-field-options='{"format": "d MMMM y"}'/></td>
-                        </tr>
-                        <tr class="border">
-                            <td>DPJP</td>
-                            <td> : </td>
-                            <td><span t-esc="doctor" /></td>
-                        </tr>
-                        <tr class="border">
-                            <td>Ruang</td>
-                            <td> : </td>
-                            <td><span t-esc="bed" /></td>
-                        </tr>
-                    </table>
-                    <br />
-                    <br />
-                    <br />
-                    <table style="width:100%">
-                        <tr>
-                            <th class="border">Hari/TGL</th>
-                            <th class="border">Tindakan</th>
-                            <th class="border">Paraf ( Bubuhkan, Stempel, Nama, Paraf, Tanggal, Jam )</th>
-                        </tr>
-                        <t t-foreach="sale_order_list" t-as="order_list">
-                            <tr>
-                                <td class="border"><span t-esc="order_list['tanggal']" /></td>
-                                <td class="border"><span t-esc="order_list['tujuan']" /></td>
-                                <td class="border"><span t-esc="order_list['doctor_name']" /></td>
-                            </tr>
+                        th, td {
+                        padding: 5px;
+                        font-size:10px;
+                        }
+                        .border{
+                            border: 1px solid black;
+                        }
+                    </style>
+                    <div class="oe_structure">
+                        <h2 style="text-align:center;">IMPLEMENTASI KEPERAWATAN</h2>
+                        <t t-foreach="docs" t-as="o">
+                            <table style="width:100%">
+                                <tr class="border">
+                                    <td>No.RM</td>
+                                    <td> : </td>
+                                    <td><span t-field="o.patient.medical_record" /></td>
+                                </tr>
+                                <tr class="border">
+                                    <td>Nama Pasien</td>
+                                    <td> : </td>
+                                    <td><span t-field="o.patient.name" /></td>
+                                </tr>
+                                <tr class="border">
+                                    <td>Tanggal Lahir </td>
+                                    <td> : </td>
+                                    <td><span t-field="o.patient.dob" t-field-options='{"format": "d MMMM y"}'/></td>
+                                </tr>
+                                <tr class="border">
+                                    <td>DPJP</td>
+                                    <td> : </td>
+                                    <td><span t-field="o.doctor.name" /></td>
+                                </tr>
+                                <tr class="border">
+                                    <td>Ruang</td>
+                                    <td> : </td>
+                                    <td><span t-field="o.room_id.name" /></td>
+                                </tr>
+                            </table>
                         </t>
-                    </table>
+
+                        <br />
+                        <br />
+                        <br />
+                        <table style="width:100%">
+                            <tr>
+                                <th class="border">Hari/TGL</th>
+                                <th class="border">Tindakan</th>
+                                <th class="border">Paraf ( Bubuhkan, Stempel, Nama, Paraf, Tanggal, Jam )</th>
+                            </tr>
+                            <t t-foreach="sale_order_list" t-as="order_list">
+                                <tr>
+                                    <td class="border"><span t-esc="order_list['tanggal']" /></td>
+                                    <td class="border"><span t-esc="order_list['tujuan']" /></td>
+                                    <td class="border"><span t-esc="order_list['doctor_name']" /></td>
+                                </tr>
+                            </t>
+                        </table>
+                    </div>
                 </div>
-            </div>
+            </t>
         </t>
     </template>
 </odoo>
